# axoasset

./: CHANGELOG.md  Cargo.toml  README.md  index.html  oranda.json  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: oranda.yml  publish-crates.yml  rust.yml
examples/: compress.rs
src/: compression.rs  error.rs  lib.rs  local.rs  remote.rs  source.rs  spanned.rs
tests/: copy.rs  load.rs  local_copy.rs  local_load.rs  local_new.rs  local_remove.rs  local_write.rs  remote_copy.rs  remote_load.rs  remote_write.rs  source.rs  write.rs
